# dendrite-scraper

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/dendrite_scraper/: __main__.py  cli.py  scraper.py  server.py  settings.py
src/web_scraper/: __main__.py  scraper.py  server.py  settings.py
tests/: conftest.py  test_cli.py  test_scraper.py  test_server.py
